--- a/root/var/www/html/xs-portal/incl/banner.html
+++ b/root/var/www/html/xs-portal/incl/banner.html
@@ -2,3 +2,7 @@
 	<div class="xsIcon">
 		<img src="images/xs_icon.png">
 	</div>
+
+	<div class="xsPortalImg">
+		<img src="images/Ghana_flag_300.png">
+	</div>
