--- a/root/var/www/html/home/index.html
+++ b/root/var/www/html/home/index.html
@@ -76,16 +76,16 @@
 
     <img src="/common/images/TED319335.gif" alt="TED Talks">
 
-    <h2>TED Talks/h2>
+    <h2>TED Talks</h2>
 
     <p>Conferences on Technology, Entertainment, and Design.</p>
     <ul>
-    <li><a href="http://schoolserver.lan:3000/ted_en_science_2015-02/">The Science TED Talks.</a>
-    <li><a href="http://schoolserver.lan:3000/ted_en_technology_2015-02/">The Technology TED Talks.</a>
-    <li><a href="http://schoolserver.lan:3000/ted_en_design_2015-02/">The Design TED Talks.</a>
-    <li><a href="http://schoolserver.lan:3000/ted_en_business_2015-02/">The Business TED Talks.</a>
-    <li><a href="http://schoolserver.lan:3000/ted_en_global_issues_2015-02/">The Global Issues TED Talks.</a>
-    <li><a href="http://schoolserver.lan:3000/ted_en_entertainment_2015-02/">The Entertainment TED Talks.</a>
+    <li><a href="http://schoolserver.lan:3000/ted_en_science_2015-02/">The Science TED Talks.</a></li>
+    <li><a href="http://schoolserver.lan:3000/ted_en_technology_2015-02/">The Technology TED Talks.</a></li>
+    <li><a href="http://schoolserver.lan:3000/ted_en_design_2015-02/">The Design TED Talks.</a></li>
+    <li><a href="http://schoolserver.lan:3000/ted_en_business_2015-02/">The Business TED Talks.</a></li>
+    <li><a href="http://schoolserver.lan:3000/ted_en_global_issues_2015-02/">The Global Issues TED Talks.</a></li>
+    <li><a href="http://schoolserver.lan:3000/ted_en_entertainment_2015-02/">The Entertainment TED Talks.</a></li>
     </ul>
 </div>
 
