remove radio lab

--- a/root/var/www/html/home/index.html
+++ b/root/var/www/html/home/index.html
@@ -458,7 +458,7 @@
 
 </div>
 
-<div class="content-item">
+<!-- <div class="content-item">
 
     <a href="/rachel/modules/radiolab/"><img src="/rachel/modules/radiolab/radiolab.png" alt="Radiolab"></a>
 
@@ -466,7 +466,7 @@
 
     <p>Radiolab is a radio program produced by WNYC, a public radio station in New York City, and broadcast on public radio stations in the United States. The show is nationally syndicated and is available as a podcast. </p>
 
-</div>
+</div>  -->
 
 <!-- <div class="content-item">
 
